added lots of stuff

--- a/meetsoup.html
+++ b/meetsoup.html
@@ -91,7 +91,7 @@ img{
 
   <article>
     <h2>ZERJ Project</h2>
-    <p>Our group name is ZERJ. We are creating an app called MeetSoup. the group members are: Jack Henker, Robert Bell, Zak Toews, Elan Jonas-McRae.</p>
+    <p>Our group name is ZERJ. We are creating an app called MeetSoup. The group members are: Jack Henker, Robert Bell, Zak Toews, Elan Jonas-McRae.</p>
   </article>
 
 </section>
@@ -133,6 +133,124 @@ img{
     <p>[1] City of Edmonton, “The problem of food waste,” Change for Climate, https://changeforclimate.ca/story/the-problem-of-food-waste (accessed May 23, 2023).</p>
     <p>[2] S. Naushad, “Food Waste in Canada,” Youth in Food Systems, https://seeds.ca/schoolfoodgardens/food-waste-in-canada-/ (accessed May 24, 2023). </p>
     <p>[3] “How many Canadians are affected by household food insecurity?,” PROOF, https://proof.utoronto.ca/food-insecurity/how-many-canadians-are-affected-by-household-food-insecurity/ (accessed May 24, 2023).</p>
+    <h2>MeetSoup User Research</h2>
+    <h1>Participant Summary</h1>
+    <p>We recruited 7 participants for our study.</p>
+    <p>Participant 1: A 33-year-old UVic biomedical engineering student. This participant can be described as such:</p>
+    <ul>
+      <li>Thrifty student who does not turn down free food</li>
+      <li>Enjoys cooking, especially with quality ingredients when they have the time</li>
+      <li>Is tech-literate by very concerned about tech-related privacy</li>
+    </ul>
+    <p>Participant 1 is valuable to us for two reasons. One, that university students would likely provide a large base of consumers to an app like ours. Two, we should give attention to how things such as personal details and location can compromise a person’s privacy.</p>
+    <p>Participant 2: A 23-year-old UVic software engineering student. Attributes that sum up this participant:</p>
+    <ul>
+      <li>Very tech-literate in both products and best practices</li>
+      <li>Casual palette, not too critical of food</li>
+      <li>Enjoys going places – does not mind traveling across town for something to do</li>
+    </ul>
+    <p>This participant is valuable as the “ideal” consumer. They provide us with an understanding of the best weather cases as they are physically able, possess sufficient free time, are tech-literate, and are also agreeable enough to use the potential app with no issue. They could also be used as a resource for any trials.</p>
+    <p>Participant 3: A 61-year-old former stay at home mother. This participant possesses the following characteristics:</p>
+    <ul>
+      <li>Loves cooking and regularly buys organic ingredients</li>
+      <li>Owns a smartphone and understands technology to a moderate degree</li>
+      <li>Well educated.</li>
+    </ul>
+    <p>Our team believed that this subject regularly uses applications and often uses food ingredients with a short shelf life. Participant 3 enabled our team to understand that some people prefer contact free options and do not enjoy messaging or notification features. </p>
+    <p>Participant 4: A 31-year-old special needs caregiver. This participant holds the following traits:</p>
+    <ul>
+      <li>Extremely frugal</li>
+      <li>Owns a smartphone and possesses a strong understanding of technology</li>
+      <li>Travels often for leisure.</li>
+    </ul>
+    <p>Participant 4 consumes almost everything she purchases and always looks for ways to save money. She allowed our team to better understand how far a frugal person is willing to travel for free food. This participant provided our team with insight into how much food is thrown away during travel.</p>
+    <p>Participant 5: A 22-year-old caretaker. This participant:</p>
+    <ul>
+      <li>Previously experienced food insecurity and used food banks</li>
+      <li>Has a low income and enjoys any opportunity to save on food</li>
+    </ul>
+    <p>Participant 5 has valuable input when it comes to using food service systems. They also gave insight to challenges people may face when trying to find food, such as mental health and travel costs in rural areas. They also traded labor for food with their landlord, and other neighbors that produce food.  </p>
+    <p>Participant 6: A 40-year-old medical records clerk. This participant:</p>
+    <ul>
+      <li>Is frugal and wastes very little food. Composts.</li>
+      <li>Has previously been an artist where income was not stable.</li>
+    </ul>
+    <p>Participant 6 gave us the perspective from somebody who lived in a previous country, where apartment buildings had food sharing pickup/drop areas for a similar purpose to our project. </p>
+    <p>Participant 7: A 25-year-old chef. This participant:</p>
+    <ul>
+      <li>Uses food banks</li>
+      <li>Wastes very little food personally, but at their work a lot of food is wasted.</li>
+    </ul>
+    <p>This participant is valuable because they helped us see how a restaurant could use our app to donate food instead of waste food. This helped our project goal by seeing how a commercial kitchen could use our app to donate food instead of throwing away food. Participant 7 also had good input on how our app should look.</p>
+    <h1>Research Methods</h1>
+    <p>We used two research methods for data gathering for our project. </p>
+    <p>Firstly, we conducted interviews as a method of data gathering. We wanted to do the interview because it could be a quick way of getting relevant information. Doing this method first also allowed us to hear opinions from people who are not academically attached to the project. Within this interview, we directly asked questions about wasting food, donating food, and receiving donated food. We also asked questions about what a food donation app would look like to them, and if they would use it.</p>
+    <p>To summarize the interview findings, we know people think that food scarcity is a real issue, that an app to assist finding free food is a promising solution, and that some features like alerts would benefit users who wish to enable them.</p>
+    <p>We feel that the information that we collected from the interview was helpful to our understanding of what people are looking for as a solution to food scarcity and waste on a local level.</p>
+    <p>Secondly, we utilized a diary study to collect data from participants regarding the food they wasted, and whether they donated food or received donated food. We chose the diary study as we had assumed that a catalogue of the types of the food that were being wasted, donated, or picked-up would be greatly beneficial to our research.We also asked our participants to record whether or not they would want to donate the food they wasted.</p>
+    <p>Except for the chef participant who worked in a kitchen, our participants who did the diary study didn’t waste much food, and this left us with not very much information gathered; however, the same people who admitted to wasting food at times in the interview also did not find themselves wasting any food on the chosen duration (four days) for the diary study. To improve our diary study, we could have used more people and have had a longer duration to conduct the study. We feel that people throwing away food is not an uncommon occurrence, and that a longer period would have revealed such instances eventually.</p>
+    <h1>Task Descriptions</h1>
+    <p>Task 1: Jorg, a student living on campus at UVIC, is very frugal and open-minded. He opens Facebook and looks to find some food that he can use for meals over the next week. He browses some of the postings on a foodshare group that he figures are within biking distance. Upon finding a posting offering potatoes, he clicks on it to learn more. The buyer bought a large bag to get a better deal, and is offering up the rest that are starting to sprout. He confirms the pickup with the poster, and heads out on his bike to pick up the potatoes. </p>
+    <p>Discussion: People like Jorg are a common demographic type for the MeetSoup platform. As a student, Jorg is likely very able to navigate through user interfaces of various platforms, as a large amount of coursework requires these abilities. Jorg might just need to supplement his pantry with an item or two, or he might like to pick up multiple items from multiple people and/or establishments. </p>
+    <p>Task 2: Agnes, a retired cleaning supplies salesperson loves to make banana bread for her family members. She has arthritis and uses a walker, so she doesn’t like to use transit or travel very far. She didn’t grow up with much when it comes to technology, but her family helps her use her cell phone. She ran out of bananas this week before her weekly visit to the grocery store. She calls her friends and neighbors and asks if they have any spare bananas, but unfortunately they don’t. </p>
+    <p>Discussion: Agnes is a great example to study as she presents us with two challenges. First, as a retiree, we assume she is older than the average population, and she may not immediately understand how to use a new user interface. She might benefit from some in-app guidance when navigating the platform. Secondly, Agnes also is affected by mobility issues, so being able to filter her search based on distance is crucial to her usage. Since she makes frequent use of one type of item, she is the perfect candidate for the alert system. She is able to set alerts specifically for bananas, and ensure that the alerts are for nearby postings.</p>
+    <p>Task 3 : Samantha, a former stay at home mother loves to cook and often purchases expensive organic ingredients. She holds a degree in biology and exhibits a passion for the environment. Samantha owns a smartphone and is well versed in utilizing it to fulfill her needs without any assistance. She cooked a large portion of chili and worries that some of it will remain unconsumed upon expiration. She phones a close friend and offers to give them the food. This friend is unavailable to pick up the food. Samantha phones a second friend who happily drives to pick up the food.</p>
+    <p>Discussion: Samantha represents a core type of user for the MeetSoup application. She purchases expensive organic ingredients that often expire quickly. Additionally, she values the environment as well as the well-being of others. These characteristics lead her to taking an initiative to donate her food rather than throwing it out. Samantha is health conscious and does not wish to come into contact with others. This requires an option for food to be placed outside for pickup.</p>
+    <p>Task 4: Bill, a young owner of a small local grocery store sources sustainable food whenever possible. He owns a phone but doesn’t use it much outside of work and struggles using technology in general. Bill, with the help of the store manager, creates a station outside the store where soon-to-perish food items are placed. Bill places all donatable food items at this station. At the end of the day, Bill retrieves unclaimed food items and disposes of them.</p>
+    <p>Discussion: Grocery stores and businesses waste much larger quantities of food than individuals. Bill holds the ability to get large quantities of food to those who need it. He possesses the following challenges: he is not particularly tech savvy and lacks time to post items individually. He is an ideal candidate for bulk donation options within the application as well as a user who requires an extremely easy to use interface.</p>
+    <h1>Journey Maps</h1>
+    <img src="MeetSoupMedia/jmap1.jpg" alt="Journey Map 1" width= 50% align="middle">
+    <p>Figure 1.1 – A journey map displaying a likely scenario with student Jorg.</p>
+    <img src="MeetSoupMedia/jmap2.jpg" alt="Journey Map 2" width= 50% align="middle">
+    <p>Figure 1.2 – A journey map displaying a likely scenario with Elderly Agnes.</p>
+    <img src="MeetSoupMedia/jmap3.jpg" alt="Journey Map 3" width= 50% align="middle">
+    <p>Figure 1.3 – A journey map displaying a likely scenario with home-keeper Samantha.</p>
+    <img src="MeetSoupMedia/jmap4.jpg" alt="Journey Map 4" width= 50% align="middle">
+    <p>Figure 1.4 – A journey map displaying a likely scenario with Grocery Store Bill.</p>
+    <h1>Design Requirements</h1>
+    <h1>Primary Features:</h1>
+    <ul>
+      <li>Search and post functionality – The design will require a search for food functionality and a posting food functionality. These are basic functionalities of the app that will comprise the main part of the app. Our users will be able to smoothly coordinate food pickups.</li>
+      <li>Direct Messaging – Our design requires a direct messaging part of the application. Messaging should be a secondary means of ironing out details, but not necessary for most pickups.</li>
+    </ul>
+    <h1>Secondary Features:</h1>
+    <ul>
+      <li>Hint and help system – Our app will have a hint system and help menu for hints and help on how to use our application. Our users should find this app easy to use but hints could be helpful for improving discoverability.</li>
+      <li>Scheduling for the app – Users should be able to coordinate when, where and how a pickup should occur.</li>
+      <li>Confirmations – Confirming when a food item has been picked up, pending pickup, or posted. It should be clear when an item is posted, picked up or pending pickup.</li>
+      <li>Alerts – The user should be notified when a food item they want is available nearby.</li>
+    </ul>
+    <h1>Tertiary Features:</h1>
+    <ul>
+      <li>Camera feature – For a restaurant or store, there could be a camera feature that shows the food that the restaurant or store has to donate. People could check this live feed to see what kind of food the store has available.</li>
+      <li>Pantry checking reminder – The user could have the option to set an alert to check their kitchen for food they are not going to use to encourage donation.</li>
+    </ul>
+    <h2>Low-Fidelity Prototyping and Heuristic Evaluation</h2>
+    <h1>Brainstorming Session Results</h1>
+    <p>We decided to group our brainstorming ideas as specific features of the app that we are envisioning. To ensure some diversity within our ideas/sketches, we figured that we would draw up our sketches separately and come back together to discuss the different features/sketches (as opposed to verifying what our sketches should include beforehand). It was interesting to see how the interpretations of the features (before seeing the sketches) varied between the team members in the discussion. After reviewing all the sketches and features that we had individually produced, we grouped them by most important/relevant. We were able to then narrow down the initial amount of sketches to four (found below in figures 1.1-1.4).</p>
+    <p>When discussing our sketches, we discovered that simply presenting and talking about proposed features made it much more clear as to what to trim and which direction our project needs. The conversation allowed us to find redundancies where information had been entered twice, or where certain features were too broad and should be broken down further.  For example, after our discussion, we decided that when a search for food with specified characteristics yields no results, the platform should offer an alert with the fields auto filled so that the user can quickly set up notifications. Also during this time we decided that establishments should have a separate type of post, with some slight differences in system operation.</p>
+    <p>This session was great for us to gather insight as we were able to decide on features and details while also having visual aids during the discussion. The most distinguishing features we offered compared to existing methods of food donation and distribution were the alert system, being able to find particular items, and map integration with a distance filter. These features will make it easier for those experiencing food insecurity to plan their routes to find items as well as minimising distances required for travel. Next time we agreed it would have been good to have this type of brainstorming session done much earlier, so conceptually we would be on the same page for these aspects of the project.</p>
+    <h1>Sketches</h1>
+    <img src="MeetSoupMedia/sktch1.jpg" alt="sktch1" width= 50% align="middle">
+    <p>Figure 1.1 Signing-up Feature: This sketch shows the navigational steps for creating an account for MeetSoup. A person can either create a personal or business account.</p>
+    <img src="MeetSoupMedia/sktch2.png" alt="sktch2" width= 50% align="middle">
+    <p>Figure 1.2 Alert Setting Feature: This sketch shows navigational steps for setting an alert function from within the Alerts Menu.</p>
+    <img src="MeetSoupMedia/sktch3.png" alt="sktch3" width= 50% align="middle">
+    <p>Figure 1.3 Creating a post: This sketch shows the navigational steps for creating a public post in MeetSoup.</p>
+    <img src="MeetSoupMedia/sktch4.png" alt="sktch4" width= 50% align="middle">
+    <p>Figure 1.4 Searching for food: This sketch shows the steps required to find a public post on MeetSoup.</p>
+    <h1>Storyboard</h1>
+    <img src="MeetSoupMedia/storyb1.jpg" alt="storyboard1" width= 50% align="middle">
+    <img src="MeetSoupMedia/storyb2.jpg" alt="storyboard2" width= 50% align="middle">
+    <h1>Prototype</h1>
+    <p>Our team developed a low fidelity video prototype to get a feel for what we are developing. </p>
+    <p>The video first outlines the task description. Then we are shown the main menu scheme, and the user clicks on “Find Food”. The app then displays some nearby postings on a map, as the map view is the default view. Note that the icons above the map view allow for the user to switch between view types, such as “list view” or “map view”. </p>
+    <p>The user then decided to add filters to their search by clicking the funnel icon above the map. A screen with drop down menus for the category, subcategory, item type and max distance were displayed. The user selects choices from the drop down menus, and clicks the “set” button to apply the filter.</p>
+    <p>Now that the search filters have been applied, the user is brought back to the “Find Food” screen. This search yielded no results, and the user is offered a hint. This hint is a prompt to set alerts for what the user has just searched for.</p>
+    <p>The user is taken to the alert creation screen with the fields autofilled. The user reviews this, and once again clicks the “set” button. The platform then displays the alerts menu, and the newly added alert is visible. Note the green icon next to the alert. This allows for users to toggle alerts, opposed to only being able to create or delete them.</p>
+    <iframe width="560" height="315" src="https://youtu.be/DJaCro8_6-0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+    <h1>Heuristic Evaluation</h1>
+
 
 
 
